cambié el fondo pq blanco no me encantaba

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- _____ Slick Slider _____ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
 </head>
-<body>
+<body style="background-color: #e4c9f430;">
     <!------------------------------ NABVAR ----------------------------->
     <div class="navbar">
         <div id="navimg"> 
